# mars-jetson

./: .clang-tidy  .gitignore  .gitmodules  404.html  CMakeLists.txt  Dockerfile  LICENSE  README.md  clean.sh  config.xml  cyclonedds.xml  data_analysis.py  deploy.sh  deployWithoutBuild.sh  docker-compose.yaml  fields  frames_2026-02-23_16.35.21.gv  frames_2026-02-23_16.51.42.gv  frames_2026-02-25_17.58.57.gv  frames_2026-02-25_18.00.53.gv  frames_2026-02-25_18.49.17.gv  human_input_state_example.yaml  index.html  launch.sh  launch.xml  ls.txt  main.py  mkdocs.yml  notes  obstacle_detect_logs.txt  ost.txt  ost.yaml  override.yaml  pyproject.toml  requirements.txt  run.txt  setup.py  setup_terminal.sh  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.template
apriltag_pose_estimation/apriltag/: estimator.py
apriltag_pose_estimation/core/: bindings.py  camera.py  detection.py  euclidean.py  field.py  pnp.py
apriltag_pose_estimation/generate/: __main__.py  core.py
apriltag_test/: camera_calibration.py  data.json  detect.py  pose_estimation.py
calibrations/: arducam1.txt  arducam1.yaml
digdump/: index.html
docker/: combined.Dockerfile  gstreamer.Dockerfile
docs/: index.md  networking.md  setup.md  teleop.md  troubleshooting.md
drivers/scripts/: buildzed.sh
evaluation/: find_best.py
examples/: 2d_detect_simple.cpp  localize.cpp  localize_data.cpp
fields/: mars-6-only.json
gstreamer/: index.html
include/marslocalizer/: detector.hpp  field.hpp  localizer.hpp  overlays.hpp
launch/: launch.xml  launch_arducam.py  zed.launch.py
launch/schema/: launch.xsd
messages/: index.html
my-robot/: robot.xacro
my-robot/assets/: drum.part  frame__length_0_40640000000000004_meter.stl  frame__length_0_6096_meter.stl  wheel.part  wheel.stl
networking/: index.html
rosbag2_2026_03_15-19_23_09/: metadata.yaml  rosbag2_2026_03_15-19_23_09_0.db3
rosbag2_2026_03_15-19_27_59/: metadata.yaml  rosbag2_2026_03_15-19_27_59_0.db3
scripts/: buildzed.sh  jetson_ip.py
search/: search_index.json
serialnode/: index.html
setup/: index.html
site/: 404.html
site/messages/: index.html
site/setup/: index.html
src/: platform_compat.c  platform_compat.h
src/actions/: CMakeLists.txt  package.xml  setup.py
src/apriltag_localization/: CMakeLists.txt  package.xml
src/apriltag_localization/robot_urdf/: robot.urdf
src/apriltag_localization/src/: node.cpp  taring_server.cpp
src/apriltag_msgs/: CMakeLists.txt  package.xml
src/apriltag_nodes/: package.xml  setup.cfg  setup.py
src/apriltag_pose_estimation/: .gitignore  CMakeLists.txt  calibrate.py  main.py  package.xml  requirements.txt  setup.cfg  setup.py
src/arm_drum_controller/: CMakeLists.txt  package.xml  plugins.xml
src/arm_drum_controller/src/: arm_drum_controller.cpp
src/autonomy_msgs/: CMakeLists.txt  package.xml
src/cameras/: CMakeLists.txt  package.xml
src/cameras/src/: display.cpp
src/control_msgs/: CMakeLists.txt  package.xml
src/digdump/: CMakeLists.txt  package.xml
src/digdump/include/digdump/: action_server.hpp
src/digdump/src/: action_server.cpp
src/error_node/: errNode.py
src/gstream/: CMakeLists.txt  package.xml
src/gstream/src/: streamer.cpp
src/gstream_msgs/: CMakeLists.txt  package.xml
src/gstream_py/: package.xml  setup.cfg  setup.py
src/gstreamer/: README  README.md  (+2 more)
src/network_communication/: CMakeLists.txt  README.md  package.xml
src/network_communication/include/: client.hpp  main.hpp  net_node.hpp  server.hpp
src/network_communication/src/: client.cpp  frame_sender.cpp  main.hpp  net-node.cpp  net_node.cpp  server.cpp  string-publisher.cpp
src/network_communication/src/archived_code/: client_udp.c  client_udp.h
src/network_communication/test/: CMakeLists.txt  full_loop_test.cpp  jetson_server_test.cpp  runners.cpp  sending_test.cpp
src/network_communication/test/shell/: test.ps1  test.sh
src/obstacle_detection/src/: .obstacle_detect_process.cpp.swp  CMakeLists.txt  extract_capture.cpp  extract_capture.h  gradient_map.cpp  gradient_map.h  local_obstacle_avoidance.cpp  local_obstacle_avoidance.h  local_path_planner_graph.cpp  local_path_planner_graph.h  obstacle_detect.cpp  obstacle_detect.h  obstacle_detect_node.cpp  obstacle_detect_process.cpp  realsense.h  realsense_capture.cpp  realsense_capture.h  realsense_ply.cpp  rgb_writer.cpp  startup.cpp
src/obstacle_detection/src/librealsense2-pkg/librealsense-win/examples/: CMakeLists.txt
src/obstacle_detection/src/librealsense2-pkg/librealsense-win/src/gl/: CMakeLists.txt
src/obstacle_detection/src/librealsense2-pkg/librealsense-win/tools/: CMakeLists.txt
src/obstacle_detection/src/models/: obstacle_clustering_tree.cpp  pc_adacency_tree.cpp  pc_adacency_tree.h  pc_octree.cpp  realsense.h
src/obstacle_detection/src/shell/: artifact_build.ps1  artifact_build.sh  realsense_extract.sh
src/robot_state_machine/: CMakeLists.txt  package.xml
src/robot_state_machine/include/robot_state_machine/: state_machine.hpp
src/robot_state_machine/src/: state_machine.cpp
src/robot_state_machine/srv/: ResetBreadcrumbing.srv
src/serial_comms/: CMakeLists.txt  README.md  node.py  package.xml  send.py  send_original.py
src/serial_comms/include/serial_comms/: serial_node.hpp
src/serial_cpp/: CMakeLists.txt  package.xml
src/serial_cpp/include/: serial_handler.hpp  serial_node.hpp
src/serial_cpp/src/: serial_handler_test.cpp  serial_node.cpp
src/webapp_comms/: CMakeLists.txt  package.xml
src/webapp_comms/src/: .net_node.swp  .server.cpp.swp  a.out  client  client.c  client.cpp  client.hpp  client_udp  client_udp.c  client_udp.h  frame_sender.cpp  frame_sender.hpp  image_sub.cpp  main.hpp  net_node.cpp  server.cpp  server.hpp
src/webapp_comms/src/archived_code/: server_udp.c
src/webapp_comms/test/: CMakeLists.txt  full_loop_test.cpp  jetson_server_test.cpp  runners.cpp  sending_test.cpp  socket_class_test.cpp
src/webapp_comms/test/shell/: test.ps1  test.sh
startup/: index.html
teleop/: index.html
test/: test_strategies.py
troubleshooting/: index.html
(+274 files in other folders)
