<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_drum_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lindiana1206@gmail.com">diana</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>robot_control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
